New entries should be added at the top

==============================================================
2004-09-15 Applied Fernando's backend __init__ patch to support easier
           backend maintenance.  Added his numutils to mlab.  JDH

2004-09-16 Re-designated all files in matplotlib/images as binary and
	   w/o keyword substitution using "cvs admin -kb *.svg ...".
	   See binary files in "info cvs" under Linux.  This was messing
	   up builds from CVS on windows since CVS was doing lf -> cr/lf 
	   and keyword substitution on the bitmaps.  - JTM

2004-09-15 Modified setup to build array-package-specific extensions
	   for those extensions which are array-aware.  Setup builds
	   extensions automatically for either Numeric, numarray, or
	   both, depending on what you have installed.  Python proxy
	   modules for the array-aware extensions import the version
	   optimized for numarray or Numeric determined by numerix.
           - JTM

2004-09-15 Moved definitions of infinity from mlab to numerix to avoid
	   divide by zero warnings for numarray - JTM


==============================================================
2004-08-30 matplotlib 0.62.4 released

2004-08-30 Fixed a multiple images with different extent bug,
           Fixed markerfacecolor as RGB tuple

2004-08-27 Mathtext now more than 5x faster.  Thanks to Paul Mcguire
           for fixes both to pyparsing and to the matplotlib grammar!
           mathtext broken on python2.2

2004-08-25 Exposed Darren's and Greg's log ticking and formatting
           options to semilogx and friends

2004-08-23 Fixed grid w/o args to toggle grid state - JDH

2004-08-11 Added Gregory's log patches for major and minor ticking

2004-08-18 Some pixel edge effects fixes for images

2004-08-18 Fixed TTF files reads in backend_ps on win32.  

2004-08-18 Added base and subs properties for logscale plots, user
           modifiable using
           set_[x,y]scale('log',base=b,subs=[mt1,mt2,...]) - GL
