@@ -28,7 +28,7 @@ backend      : GTKAgg    # the default backend
 numerix      : Numeric   # Numeric or numarray
 interactive  : False     # see http://matplotlib.sourceforge.net/interactive.html
 toolbar      : toolbar2   # None | classic | toolbar2
-
+timezone     : UTC        # a pytz timezone string, eg US/Central or Europe/Paris
 # Where your matplotlib data lives if you installed to a non-default
 # location.  This is where the matplotlib fonts, bitmaps, etc reside
 #datapath : /home/jdhunter/mpldata
