@@ -5,39 +5,30 @@ formatters.  See major_minor_demo1.py for more information on
 controlling major and minor ticks
 """
 
-import sys
-try: import datetime
-except ImportError:
-    print >> sys.stderr, 'This example requires the python2.3 datetime module though you can use the matpltolib date support w/o it'
-    sys.exit()
-    
 from matplotlib.matlab import *
-from matplotlib.dates import PyDatetimeConverter, MONDAY, SATURDAY
+from matplotlib.dates import MONDAY, SATURDAY
 from matplotlib.finance import quotes_historical_yahoo
-from matplotlib.ticker import MonthLocator, WeekdayLocator, DateFormatter
+from matplotlib.dates import MonthLocator, WeekdayLocator, DateFormatter
 
 
-date1 = datetime.date( 2003, 1, 1 )
-date2 = datetime.date( 2004, 4, 12 )
+date1 = datetime.date( 2002, 1, 5 )
+date2 = datetime.date( 2003, 12, 1 )
 
-pydates = PyDatetimeConverter()
-
-mondays   = WeekdayLocator(MONDAY)  # every monday
-months    = MonthLocator(1)           # every month
+mondays   = WeekdayLocator(MONDAY)    # every monday
+months    = MonthLocator(range(1,13), bymonthday=1)           # every month
 monthsFmt  = DateFormatter('%b %d')
 
 
-quotes = quotes_historical_yahoo(
-    'INTC', date1, date2, converter=pydates)
+quotes = quotes_historical_yahoo('INTC', date1, date2)
 if not quotes:
+    print 'Found no quotes'
     raise SystemExit
 
 dates = [q[0] for q in quotes]
 opens = [q[1] for q in quotes]
 
 ax = subplot(111)
-plot_date(dates, opens, pydates)
-
+plot_date(dates, opens)
 ax.xaxis.set_major_locator(months)
 ax.xaxis.set_major_formatter(monthsFmt)
 ax.xaxis.set_minor_locator(mondays)
@@ -46,7 +37,7 @@ ax.autoscale_view()
 #ax.xaxis.grid(True, 'minor')
 
 labels = ax.get_xticklabels()
-set(labels, 'rotation', 45)
+set(labels, rotation=45)
 
 grid(True)
 show()
